--- a/app/src/main/res/layout/item_mainhome.xml
+++ b/app/src/main/res/layout/item_mainhome.xml
@@ -1,35 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/colorWhite"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
     android:paddingLeft="@dimen/dp_10"
     android:paddingRight="@dimen/dp_10"
     android:paddingTop="@dimen/dp_15"
     android:paddingBottom="@dimen/dp_15"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+    <ImageView
+        android:id="@+id/item_mainhome_img_icon"
+        android:src="@drawable/ic_logo"
+        android:layout_width="@dimen/dp_30"
+        android:layout_height="@dimen/dp_30" />
     <TextView
         android:id="@+id/item_mainhome_tv_title"
         android:textColor="@color/colorTextBlack"
+        android:layout_marginTop="@dimen/dp_3"
         tools:text="通知公告"
-        android:textSize="@dimen/sp_15"
+        android:textSize="@dimen/sp_13"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
     </TextView>
-    <TextView
-        android:id="@+id/item_mainhome_tv_ftitle"
-        android:layout_below="@id/item_mainhome_tv_title"
-        android:textColor="@color/colorTextGray"
-        tools:text="通知公告"
-        android:textSize="@dimen/sp_12"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-    </TextView>
-    <ImageView
-        android:id="@+id/item_mainhome_img_icon"
-        android:layout_alignParentRight="true"
-        android:src="@drawable/ic_logo"
-        android:layout_width="@dimen/dp_40"
-        android:layout_height="@dimen/dp_40" />
-</RelativeLayout>
+</LinearLayout>
