--- a/app/src/main/res/layout/item_notice.xml
+++ b/app/src/main/res/layout/item_notice.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <LinearLayout
-        android:layout_marginTop="@dimen/dp_5"
-        android:layout_marginBottom="@dimen/dp_5"
-        android:orientation="vertical"
-        android:layout_marginLeft="@dimen/dp_10"
-        android:layout_marginRight="@dimen/dp_10"
-        android:layout_width="wrap_content"
+    app:cardUseCompatPadding="true"
+    app:cardElevation="@dimen/dp_2"
+    app:cardCornerRadius="@dimen/dp_3"
+    app:cardPreventCornerOverlap="true"
+    android:layout_height="@dimen/dp_80">
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:padding="@dimen/dp_10"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
             android:id="@+id/item_notice_tv_title"
@@ -23,17 +26,17 @@
             android:id="@+id/item_notice_tv_time"
             android:textColor="@color/colorTextGray"
             android:layout_marginTop="@dimen/dp_5"
+            android:layout_alignParentBottom="true"
             android:textSize="@dimen/sp_12"
             tools:text="时间"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-    </LinearLayout>
-    <ImageView
-        android:id="@+id/item_notice_img_right"
-        android:layout_marginRight="@dimen/dp_10"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:src="@drawable/ic_rightjt"
-        android:layout_width="@dimen/dp_25"
-        android:layout_height="@dimen/dp_25" />
-</RelativeLayout>
+        <ImageView
+            android:id="@+id/item_notice_img_right"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_rightjt"
+            android:layout_width="@dimen/dp_25"
+            android:layout_height="@dimen/dp_25" />
+    </RelativeLayout>
+</android.support.v7.widget.CardView>
