--- a/app/src/main/res/layout/activity_addrepair.xml
+++ b/app/src/main/res/layout/activity_addrepair.xml
@@ -32,6 +32,7 @@
                 <EditText
                     android:id="@+id/activity_repairdetails_et_title"
                     android:textSize="@dimen/sp_15"
+                    android:hint="请输入标题"
                     android:background="@null"
                     android:textColor="@color/colorTextBlack"
                     android:layout_weight="1"
@@ -58,6 +59,7 @@
                     android:id="@+id/activity_repairdetails_et_number"
                     android:textSize="@dimen/sp_15"
                     android:background="@null"
+                    android:hint="请输入户号"
                     android:textColor="@color/colorTextBlack"
                     android:layout_weight="1"
                     android:layout_width="0dp"
@@ -83,6 +85,7 @@
                     android:id="@+id/activity_repairdetails_et_name"
                     android:textSize="@dimen/sp_15"
                     android:background="@null"
+                    android:hint="请输入姓名"
                     android:textColor="@color/colorTextBlack"
                     android:layout_weight="1"
                     android:layout_width="0dp"
@@ -107,6 +110,7 @@
                 <EditText
                     android:id="@+id/activity_repairdetails_et_phone"
                     android:textSize="@dimen/sp_15"
+                    android:hint="请输入手机号"
                     android:background="@null"
                     android:textColor="@color/colorTextBlack"
                     android:layout_weight="1"
@@ -133,6 +137,7 @@
             <EditText
                 android:id="@+id/activity_repairdetails_et_content"
                 android:textSize="@dimen/sp_15"
+                android:hint="请输入详情"
                 android:background="@null"
                 android:paddingLeft="@dimen/dp_10"
                 android:paddingRight="@dimen/dp_10"
