--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,9 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
+    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.zhwy.app.activity.MainActivity">
+    <include layout="@layout/view_title"/>
     <android.support.v4.view.ViewPager
         android:id="@+id/activity_main_viewpager"
         android:layout_width="match_parent"
@@ -13,13 +15,13 @@
         android:layout_height="0dp">
     </android.support.v4.view.ViewPager>
     <View
-        android:background="#32000000"
+        android:background="#e6e6e6"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_1"/>
     <com.flyco.tablayout.CommonTabLayout
         android:id="@+id/activity_main_bottomlayout"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_45"
+        android:layout_height="@dimen/dp_50"
         android:background="#ffffff"
         app:tl_iconHeight="@dimen/dp_18"
         app:tl_iconWidth="@dimen/dp_18"
