--- a/app/src/main/res/layout/dialog_loading.xml
+++ b/app/src/main/res/layout/dialog_loading.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
+        android:id="@+id/tv_msg"
         android:layout_marginTop="@dimen/dp_5"
         android:textColor="@color/colorTextGray"
         android:textSize="@dimen/sp_13"
