--- a/app/src/main/res/layout/activity_shiming.xml
+++ b/app/src/main/res/layout/activity_shiming.xml
@@ -1,24 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <com.zhwy.app.widget.TakePictureCameraView
-        android:id="@+id/camera"
+    <include layout="@layout/view_title"/>
+    <ScrollView
+        android:scrollbars="none"
+        android:overScrollMode="never"
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-    <com.zhwy.app.widget.TakePictureMaskView
-        android:id="@+id/mask"
+        android:layout_height="0dp">
+        <LinearLayout
+            android:orientation="vertical"
+            android:gravity="center_horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:orientation="horizontal"
+                android:padding="@dimen/dp_10"
+                android:gravity="center_vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:textSize="@dimen/sp_15"
+                    android:textColor="@color/colorTextBlack"
+                    android:text="真实姓名："
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <EditText
+                    android:id="@+id/activity_shimings_et_name"
+                    android:textSize="@dimen/sp_15"
+                    android:hint="请输入真实姓名"
+                    android:background="@null"
+                    android:textColor="@color/colorTextBlack"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content" />
+                <ImageView
+                    android:id="@+id/activity_shimings_img_takepicture"
+                    android:src="@drawable/ic_takepicture"
+                    android:layout_width="@dimen/dp_20"
+                    android:layout_height="@dimen/dp_20" />
+            </LinearLayout>
+            <View
+                android:background="@color/colorLine"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_1"/>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:padding="@dimen/dp_10"
+                android:gravity="center_vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:textSize="@dimen/sp_15"
+                    android:textColor="@color/colorTextBlack"
+                    android:text="身份证号："
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <EditText
+                    android:id="@+id/activity_shiming_et_number"
+                    android:textSize="@dimen/sp_15"
+                    android:background="@null"
+                    android:hint="请输入身份证号"
+                    android:textColor="@color/colorTextBlack"
+                    android:layout_weight="1"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+            <View
+                android:background="@color/colorLine"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_1"/>
+        </LinearLayout>
+    </ScrollView>
+    <TextView
+        android:id="@+id/activity_shiming_tv_submit"
+        android:background="@color/colorMain"
+        android:textColor="@color/colorWhite"
+        android:textSize="@dimen/sp_15"
+        android:text="认证"
+        android:gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-    <View
-        android:id="@+id/view_takepicture"
-        android:background="@drawable/shape_camera"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="30dp"
-        android:layout_width="60dp"
-        android:layout_height="60dp"/>
-</RelativeLayout>
+        android:layout_height="@dimen/dp_40" />
+</LinearLayout>
